Revert "Change display name to avoid marketplace conflict"
This reverts commit 96b64e40c59dc9acf7ba596c7a599dc2eeff82a7.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kamailio-lsp",
-  "displayName": "Kamailio KEMI Language Support",
+  "displayName": "Kamailio Language Server",
   "description": "Language support for Kamailio Python scripts — pseudo-variable highlighting, completion, diagnostics, and navigation",
   "version": "0.1.0",
   "publisher": "parlakci",
